# src/main/java/com/imageanalysis/image/ImageController.java
@@ -1,12 +1,12 @@
 package com.imageanalysis.image;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Collections;
 import java.util.List;
 
 import static org.springframework.http.HttpStatus.CREATED;
@@ -17,10 +17,12 @@ import static org.springframework.http.ResponseEntity.status;
 @RequestMapping("/api/v1/medical-images")
 public class ImageController {
 
+    private final ImageService imageService;
+
     @GetMapping
-    public ResponseEntity<List<ImageExtendedDTO>> getMedicalImages() {
-        //TODO implementation
-        return status(CREATED).body(Collections.singletonList(new ImageExtendedDTO()));
+    public ResponseEntity<List<ImageExtendedDTO>> getMedicalImages(Pageable pageable) {
+        List<ImageExtendedDTO> images = imageService.getMedicalImages(pageable);
+        return status(CREATED).body(images);
     }
 
 }
